# fuphow

./: README.md  stack.yaml
bonus/: README.md  bonus.cabal
bonus/src/: BooleanTable.hs
bonus/test/: BooleanTableSpec.hs
hw1/: README.md  hw1.cabal
hw1/src/: Battle.hs  BinarySearchTree.hs  Days.hs  Lib.hs  Nat.hs  SnM.hs  Vectors.hs
hw1/src/Test/: .#LibTest.hs  Lib.hs
hw1/test/: Spec.hs
hw2/: README.md  hw2.cabal
hw2/src/: ArithmeticExpression.hs  ChaoticGood.hs  Nondeterministic.hs  PartialFunction.hs
hw2/src/Expressions/: ArithmeticExpression.hs  IntArithmeticExpression.hs
hw2/src/Fishes/: Fish.hs  Hask.hs  Join.hs
hw2/src/Monad/: Fish.hs  Hask.hs  Join.hs
hw2/src/Parsers/: AParser.hs  ConstantFolding.hs  Monstupar.hs  SExpr.hs
hw2/test/: NondeterministicSpec.hs
hw2/test/Expressions/: IntArithmeticExpressionSpec.hs
hw2/test/Parsers/: AParserSpec.hs  ConstantFoldingSpec.hs  MonstuparSpec.hs  SExprSpec.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs
hw3/src/: CommandParser.hs  Commands.hs  CommonParser.hs  Expr.hs  ExprParser.hs
hw4/: LICENSE  README.md  hw4.cabal  list-vs-loop.html
hw4/bench/: Main.hs
hw4/src/: TemplateLib.hs
hw4/src/Comonads/: ProjectBuilder.hs  Renew.hs  RoseTree.hs
hw4/src/Lenses/: Basic.hs  FileSystem.hs
hw4/test/: TemplateLibSpec.hs
hw4/test/Comonads/: ProjectBuilderSpec.hs
hw4/test/Lenses/: BasicSpec.hs
