name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/vadimsemenov/fuphow/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Vadim Semenov
maintainer:          semenov@rain.ifmo.ru
copyright:           2017 Vadim Semenov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Days
                     , Battle
                     , Vectors
                     , Nat
                     , BinarySearchTree
                     , SnM
                     , TreePrinters
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw1
                     , hspec
                     , QuickCheck
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
