name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/vadimsemenov/fuphow/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Vadim Semenov
maintainer:          semenov@rain.ifmo.ru
copyright:           2017 Vadim Semenov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Expressions.ArithmeticExpression
                     , Expressions.IntArithmeticExpression
                     , PartialFunction
                     , Nondeterministic
                     , ChaoticGood
                     , Monad.Fish
                     , Monad.Join
                     , Monad.Hask
                     , Parsers.AParser
                     , Parsers.SExpr
                     , Parsers.ConstantFolding
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , containers
                     , hw1
  default-language:    Haskell2010

test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw2
                     , hspec
                     , QuickCheck
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       NondeterministicSpec
                     , Expressions.IntArithmeticExpressionSpec
  default-language:    Haskell2010
